# ML2_lab2

./: README.md  Taller2.docx  Task5.py  pyproject.toml  task6.py
unsupervised/clustering/: kmeans.py  kmedoids.py
unsupervised/dim_red/: pca.py  svd.py  t_sne.py
